Spacing and font styles complete - Something is overriding the colour variable, so that will need to be fixed next

--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -20,5 +20,28 @@
     font-size: 18px;    
     font-weight: 800;
     line-height: 24px;
-    letter-spacing: -0.96px;
+    letter-spacing: -0.04em;
+}
+
+.gpt3__features-container__feature-title div {
+    width: 38px;
+    height: 3px;
+    flex-shrink: 0;
+    background: var(--gradient-bar);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 0.25rem;
+}
+
+.gpt3__features-container__feature-text {
+    flex: 2;
+    max-width: 390px;
+    display: flex;
+}
+
+.gpt3__features-container__feature-text p {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 30px;
+    color: var(--color-text);
 }
